# teleop-editor

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py  state.py
backend/app/motion/: adapter.py  bridge_cache.py  evaluator.py  types.py
backend/app/robot/: common.py  gripper.py  master_arm.py  robot.py
backend/app/routers/: gripper.py  master.py  motion.py  play.py  project.py  quest.py  record.py  robot.py  teleop.py  ws.py
backend/app/services/: quest_service.py  robot_service.py
backend/app/teleop/: teleop.py
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/assets/: fonts.css  theme.css
frontend/app/components/: ClipBlendInspector.vue  MiniRobotPreview.vue  RecordDialog.vue  RobotView.vue  SourceCropDialog.vue  SourcePanel.vue  TimelineCanvas.vue  Topbar.vue  TransportBar.vue
frontend/app/composable/: useRecordingState.ts  useRobotModelCache.ts
frontend/app/lib/: apiClient.ts  csvImport.ts  exportCsv.ts  motionClient.ts
frontend/app/stores/: project.ts  system.ts
