[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "rby1-sdk==0.8.2",
    "ruckig>=0.15.3",
    "scipy>=1.15.3",
    "uvicorn[standard]>=0.35.0",
]
